# LLM-directness-experiment

./: .gitignore  README.md  classify.py  pyproject.toml  requirements.txt
data visualization/: directness_dashboard.html
data visualization/01_Presentation_Materials/: full_baseline_cohort.html
data visualization/02_Analysis_Code/: build_classification_dashboard.py  build_ground_truth_dashboard.py
prompts/: arm_a_prompt.txt  arm_b_prompt.txt  arms_a_b_prompt.txt  baseline_prompt.txt
scripts/: analyze_directness.py  analyze_pretraining_reliability.py  build_directness_dashboard.py  build_master_directness_csv.py  compute_fame_proxy.py
src/: __init__.py  builder.py  context.py  downloader.py  formatter.py  logger.py  merger.py  monitor.py  name_anonymizer.py  openai_config.py  schema.py  state.py  submitter.py  tokens.py
tests/: conftest.py  test_build_master_directness_csv.py  test_formatter_arm_a.py  test_formatter_arm_b.py  test_formatter_baseline.py  test_name_anonymizer.py  test_prompt_consistency.py  test_schema.py
