[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_directness_experiment"
version = "0.1.0"
description = "Directness audit: does GPT-5-nano's startup classification track input features or memorized pretraining facts?"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.75.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
